--- a/.github/workflows/main_debtdash.yml
+++ b/.github/workflows/main_debtdash.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - DebtDash
 
 on:
@@ -18,15 +21,14 @@ jobs:
         with:
           node-version: "20.x"
 
-      - name: Install, Build, and Test Backend
+      - name: npm install, build, and test
         run: |
-          cd backend
           npm install
 
-      - name: Upload Backend Artifact
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: backend-app
+          name: node-app
           path: ./backend
 
   deploy:
@@ -39,22 +41,22 @@ jobs:
       id-token: write #This is required for requesting the JWT
 
     steps:
-      - name: Download Backend Artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: backend-app
+          name: node-app
 
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_428E874328484F89B8D92137042C6EBC }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E4A1E3381903499581551812C2BA745B }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_227E7BC5C0DA489A87B2BB50F650EF25 }}
 
-      - name: Deploy to Azure Web App
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: "DebtDash"
           slot-name: "Production"
-          package: ./backend
+          package: ./frontend
