--- a/.github/workflows/main_debtdash.yml
+++ b/.github/workflows/main_debtdash.yml
@@ -59,4 +59,4 @@ jobs:
         with:
           app-name: "DebtDash"
           slot-name: "Production"
-          package: ./frontend
+          package: ./backend
