--- a/.github/workflows/main_debtdash.yml
+++ b/.github/workflows/main_debtdash.yml
@@ -24,6 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
+          npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -59,8 +60,4 @@ jobs:
         with:
           app-name: "DebtDash"
           slot-name: "Production"
-          package: ./
-
-      - name: Set environment variables
-        run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
+          package: .
