--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT=4000
+PORT=https://ktnm7dsc-4000.asse.devtunnels.ms/
 MONGO_URI = mongodb+srv://Klayy:CGHQ0977@mernapp.jzvbv.mongodb.net/?retryWrites=true&w=majority&appName=MERNapp
